# Mercal2

./: .env  Cargo.toml
data/: mercal2 copy.db  mercal2.db  mercal2.sqbpro
migrations/: 20251021231509_create_users_table.sql  20251022101758_add_user_details_and_roles.sql  20251022121128_create_presenca_table.sql  20251023101315_create_temporary_roles_table.sql  20251214145239_create_escala_module_full.sql  20251214183223_add_workflow_columns.sql  20251215130054_add_cobertura.sql  20251215133901_create_dividas_and_update_alocacoes.sql
src/: db.rs  error.rs  main.rs  state.rs  templates.rs
src/models/: escala.rs  mod.rs  presence.rs  user.rs
src/services/: auth_service.rs  escala_service.rs  mod.rs  presence_service.rs  user_service.rs
src/web/: admin_handlers.rs  auth_handlers.rs  escala_handlers.rs  mod.rs  mw_admin.rs  mw_auth.rs  mw_presence.rs  presence_handlers.rs  routes.rs  user_handlers.rs
templates/: admin_edit_user.html  admin_escala.html  admin_users.html  escala.html  layout.html  login.html  presence.html  user_page.html
