[package]
name = "mercal2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
axum = { version = "0.8.6", features = ["ws", "macros"]}
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
future-utils = "0.12.1"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-cookies = { version = "0.11.0", features = ["signed"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
